Fixed search bar overflowing

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
 
 .search-bar {
     width: 100%;
-    max-width: 1000px;
+    max-width: 900px;
     height: 35px;
     background: rgb(255, 255, 255);
     display: flex;
